BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Call2_vod__c.object
<CustomObject>
    <fields>
        <fullName>Is_Parent_Call_vod__c</fullName>
        <description>Formula Field to determine if the Interaction record is the Parent Interaction or an Attendee Interaction record.  1 indicates that the record is the Parent Interaction.  0 indicates that it is an Attendee Interaction.</description>
        <formula>IF(LEN( Parent_Call_vod__c )&gt;0, 0,1)</formula>
        <label>Is Parent Interaction?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Is_Sampled_Call_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checked if this interaction header designates the account that received samples for the interaction.</description>
        <label>Is Sampled Interaction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_Agenda_attached_BMS_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO EMEA Nov 2014: used for Standard Rep Presentations only. Part of the business process: users must tick the checkbox and confirm they have attached the appropriate file. The philosophy is similar to what is done in the Field Force Meeting module.</description>
        <inlineHelpText>This checkbox must be ticked and file attached prior to submitting the Standard Rep Presentation.</inlineHelpText>
        <label>Is the Agenda attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_the_Attendee_list_attached_BMS_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO EMEA Nov 2014: used for Standard Rep Presentations only. Part of the business process: users must tick the checkbox and confirm they have attached the appropriate file. The philosophy is similar to what is done in the Field Force Meeting module.</description>
        <inlineHelpText>This checkbox must be ticked and file attached prior to submitting the Standard Rep Presentation.</inlineHelpText>
        <label>Is the Attendee list attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Device_vod__c</fullName>
        <description>This field is used to track the last device used to save a call. You can build reports using this field to determine what devices are being used to record calls.</description>
        <label>Last Device</label>
        <picklist>
            <picklistValues>
                <fullName>WinModern_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data_Load_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPhone_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Online_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tablet_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blackberry_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iPad_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Last_Name_BMS__c</fullName>
        <formula>Account_vod__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Expiration_Date_vod__c</fullName>
        <description>The License Expiration Date field stores the Practitioner&apos;s State License Expiration Date that signed for Samples.</description>
        <label>License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>License_Status_vod__c</fullName>
        <description>The License Status field stores the current Status of the Practitioner&apos;s State License at the time the Signature was captured for Samples.</description>
        <label>License Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_vod__c</fullName>
        <description>State License Number for the corresponding State of the Address.</description>
        <label>License #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Limit_BMS_EMEA_IT__c</fullName>
        <description>BMS ACN - December 2015: Static Value (Limit) on Provinces in Italy. Used to display limit of promotional items to dropped at province level/customer. IN USE for ITALY only.</description>
        <formula>CASE( Parent_Address_vod__r.Region_BMS_EMEA__c , 
&quot;BASILICATA&quot; ,&quot;6&quot;, 
&quot;CALABRIA&quot; ,&quot;4&quot;, 
&quot;CAMPANIA&quot; , &quot;6&quot;, 
&quot;LAZIO&quot; , &quot;5&quot;, 
&quot;MARCHE&quot; , &quot;4&quot;, 
&quot;MOLISE&quot; , &quot;5&quot;, 
&quot;PUGLIA&quot; , &quot;5&quot;, 
&quot;SICILIA&quot; , &quot;5&quot;, 
&quot;UMBRIA&quot; , &quot;5&quot;, 
&quot;VENETO&quot; , &quot;5&quot;, 
&quot;PROVINCIA AUTONOMA DI TRENTO&quot; , &quot;4&quot;, 
&quot;0&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Limit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Id_vod__c</fullName>
        <description>The textual ID of the Location value maintained in the Location_Name_vod field.</description>
        <label>Location Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Maintains the relationship between the Person Account and the Location of the Call for Person Calls using Call Location and Group Calls with Attendees.</description>
        <label>Location Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Calls (Location Name)</relationshipLabel>
        <relationshipName>Calls_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location_Services_Status_vod__c</fullName>
        <description>Indicates the state of location services at the time a signature was  captured.

Enabled_vod – location services are turned on and the system is able to get the user’s location.
Disabled_vod – location services are turned off.
No_Connection_vod – no network connection.</description>
        <label>Location Services Status</label>
        <picklist>
            <picklistValues>
                <fullName>Enabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disabled_vod</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No_Connection_vod</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Location_vod__c</fullName>
        <description>Text field to note the location of the call. There is no special processing on this field.</description>
        <label>Location</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lunch_Learn_BMS_US__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lunch &amp; Learn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MI_BMS__c</fullName>
        <formula>CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSL_BMS__c</fullName>
        <formula>CreatedById</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MSL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Master_File_BMS_EMEA__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>VPRO EMEA Nov 2014: lookup to the Master File object. Used for Standard Rep Presentations only.</description>
        <inlineHelpText>Master File must be of type &apos;Standard Representative Presentation&apos;</inlineHelpText>
        <label>Master File</label>
        <referenceTo>Master_File_BMS_EMEA__c</referenceTo>
        <relationshipLabel>Interactions</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Assistant_BMS_US__c</fullName>
        <label>Medical Assistant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical_Discussions_vod__c</fullName>
        <description>Used to display the list of Products discussed on a Medical Interaction. Product names are delimited by double-spaces and alphabetical from left to right. This field does not control processing.</description>
        <label>Medical Discussions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_Event_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Medical Event associated to the Call.</description>
        <label>Medical Event</label>
        <referenceTo>Medical_Event_vod__c</referenceTo>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Health_BMS_US__c</fullName>
        <label>Medical Health</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Inquiry_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Used to associate a call report to a Medical Inquiry.</description>
        <label>Medical Inquiry</label>
        <referenceTo>Medical_Inquiry_vod__c</referenceTo>
        <relationshipLabel>Calls</relationshipLabel>
        <relationshipName>Calls_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Medical_Insights_BMS_CN__c</fullName>
        <description>Medical Insights for BMS China Medical user</description>
        <label>Medical Insights</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Medical_Insights_Type_BMS_CN__c</fullName>
        <description>Type of Medical Insight
Used for China Medical team</description>
        <label>Type of Medical Insight</label>
        <picklist>
            <picklistValues>
                <fullName>Clinical Trial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industry News</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Promotional activity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HEOR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Regulatory Filing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Medical_Technician_BMS_US__c</fullName>
        <label>Medical Technician</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Type_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Jun-2015: Created based on GR requirements to be able to distinguish SRPs from Opportunity Meetings</description>
        <label>Meeting Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Rep Presentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunity Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Mental_Health_BMS_US__c</fullName>
        <label>Mental Health</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Mercury_IDs_BMS_EMEA__c</fullName>
        <description>VPRO EMEA Nov 2014: field used for Standard Rep Presentations only. Reference of the Mercury system (repository for Meeting Materials)</description>
        <inlineHelpText>List of Materials (Mercury ID) separated with commas.</inlineHelpText>
        <label>Mercury IDs</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mobile_Created_Datetime_vod__c</fullName>
        <description>Date and time the Call was created on the mobile device.</description>
        <label>Mobile Created Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Mobile_ID_vod__c</fullName>
        <description>System field used by mobile products to aid synchronization.</description>
        <externalId>true</externalId>
        <label>Mobile ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Mobile_Last_Modified_Datetime_vod__c</fullName>
        <description>Date and time the Call was last saved or submitted on the mobile device.</description>
        <label>Mobile Last Modified Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Next_Call_Notes_vod__c</fullName>
        <description>Free text area to store next interaction notes.  In interaction scheduling, Pre interaction notes are populated from the next-interaction notes of the last interaction that the user did on this account.  So, Next-Interaction notes become the pre-interaction notes for the next interaction by a same user on the same account.</description>
        <label>Next Interaction Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>No_Disbursement_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The No_Disbursement_vod field is used by the Call2_vod Trigger that creates Disbursement Sample Transactions. If this field is set to True, then the Sample Transactions will not be created by the Trigger. This can be utilized when loading historical call data when the intention is to not recreate the corresponding Disbursement Sample Transactions.</description>
        <label>No Disbursement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Non_CLM_Key_Message_Count_BMS_EMEA__c</fullName>
        <description>BMS ACN : May 2015 - Roll Up Field to get the Count of Non CLM Key Messages (key Messages that are not assocaited with a DVA).</description>
        <label>Non CLM Key Message Count</label>
        <summaryFilterItems>
            <field>Call2_Key_Message_vod__c.CLM_ID_vod__c</field>
            <operation>equals</operation>
            <value></value>
        </summaryFilterItems>
        <summaryForeignKey>Call2_Key_Message_vod__c.Call2_vod__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees_BMS__c</fullName>
        <label># Attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_CLM_Slides_Presented_BMS__c</fullName>
        <label>Number of CLM Slides Presented</label>
        <summaryFilterItems>
            <field>Call2_Key_Message_vod__c.Duration_vod__c</field>
            <operation>greaterOrEqual</operation>
            <value>2</value>
        </summaryFilterItems>
        <summaryForeignKey>Call2_Key_Message_vod__c.Call2_vod__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Nurse_BMS_US__c</fullName>
        <label>Nurse</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nurse_Practitioner_BMS_US__c</fullName>
        <label>Nurse Practitioner</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nurses__c</fullName>
        <label>Nurses</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OCS_Interaction_Notes_BMS__c</fullName>
        <label>OCS Interaction Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Office_Staff_BMS_US__c</fullName>
        <label>Office Staff</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_1_BMS_US__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Organization 1 specification for PCAM programs</description>
        <label>Organization 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interactions (Organization 1:)</relationshipLabel>
        <relationshipName>Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_2_BMS_US__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Organization 2 specification for PCAM programs</description>
        <label>Organization 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interactions (Organization 2)</relationshipLabel>
        <relationshipName>Interactions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Organization_3_BMS_US__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VPRO - April 2013 - BMS Global Requirements &amp; Design: Organization 3 specification for PCAM programs</description>
        <label>Organization 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Interactions (Organization 3)</relationshipLabel>
        <relationshipName>Interactions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_BMS_US__c</fullName>
        <description>Part of the total office call section for Vir Sales</description>
        <label>Other</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Override_Lock_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Helper field for data loads.</description>
        <label>Override Lock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_Address_Id_vod__c</fullName>
        <description>The Id of the Parent Address that was used when the Call was created; the text value of the Parent_Address_vod field.</description>
        <label>Parent Address Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Address_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to address associated with this call. When data loading historical data, this field is not required and it will generally be easier to use the Address text field on call.</description>
        <label>Parent Address</label>
        <referenceTo>Address_vod__c</referenceTo>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Call_Mobile_ID_vod__c</fullName>
        <description>Mobile ID of the parent call object</description>
        <label>Parent Call Mobile ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Call_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>If this interaction record is part of a larger group call, this field is used to provide a link to that call.</description>
        <label>Parent Interaction</label>
        <referenceTo>Call2_vod__c</referenceTo>
        <relationshipLabel>Interactions (Parent Call)</relationshipLabel>
        <relationshipName>Call2_vod</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Interaction_Account_Name_BMS_US__c</fullName>
        <formula>IF( Is_Parent_Call_vod__c  = 1,   Account_vod__r.Name  ,  Parent_Call_vod__r.Account_vod__r.Name )</formula>
        <label>Parent Interaction Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Patient_Navigator__c</fullName>
        <label>Patient Navigator</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Peer_Educator_BMS_US__c</fullName>
        <label>Peer Educator</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacist_BMS_US__c</fullName>
        <label>Pharmacist</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacists__c</fullName>
        <label>Pharmacists</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Practice_Administration__c</fullName>
        <label>Practice Administration</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pre_Call_Notes_vod__c</fullName>
        <description>Free text area to store pre-interaction notes.  Pre interaction notes are populated from the next-interaction notes of that last interaction that the user did on this account.  So, Next-Interaction notes become the pre-interaction notes for the next interaction by a same user on the same account.</description>
        <label>Pre-Interaction Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Preferred_Deliver_Date_BMS_SHARED__c</fullName>
        <label>Preferred Deliver Date</label>
        <picklist>
            <picklistValues>
                <fullName>Tuesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wednesday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thursday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friday</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Presentations_vod__c</fullName>
        <description>Comma separated list of presentations for this call.</description>
        <label>Presentations</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_BMS_CN__c</fullName>
        <description>Product</description>
        <label>Product</label>
        <picklist>
            <controllingField>BU_BMS_CN__c</controllingField>
            <picklistValues>
                <fullName>Eliquis_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monopril_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glucophage_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Onglyza_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Byetta_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bydureon_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DAPAGLIFLOZIN_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kombiglyze_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theragran Gold_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vitamin B Complex_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bufferin Plus_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bufferin Day and Night_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Children/Infant Bufferin_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Theragran JR_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Taxol_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sprycel_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elotuzumab_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ipilimumab_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nivolumab_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asunaprevir (NS3)_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BMS 791325 (NS5B)_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daclatasvir (NS5A)_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Baraclude_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Peginterferon Lambda_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Capoten_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pravachol_cn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paraplatin_cn</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_CIH_BMS__c</fullName>
        <label>Product</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Master_File_BMS_EMEA__c</fullName>
        <description>BMS ACN - March 2015: Field to display the Product related to the Master File on the Standard Rep Presentation Interaction Recording Page.</description>
        <formula>Master_File_BMS_EMEA__r.Product_Compound_BMS_EMEA__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Priority_1_vod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>First product to be discussed during the call. This is the suggested priority – actual discussion order can be modified during the call.  Product is loaded from Call Cycle Entry record.</description>
        <label>Product Priority 1</label>
        <referenceTo>Product_vod__c</referenceTo>
        <relationshipName>Product_Priority_1_vod</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>